# pytest-raisin

./: .travis.yml  CHANGES.md  CHANGES.rst  README.md  README.rst  pyproject.toml  pytest_raisin.py
.github/workflows/: tests.yml
pytest_raisin/: __init__.py  comparison_py2.py  comparison_py3.py  compat.py
tests/: conftest.py  test_no_chaining.py  test_plugin.py  test_plumbing.py  test_register.py
